feat: Enhance menu and order functionalities
- Added ItemSize enum to represent menu item sizes (REGULAR, MINI).
- Updated OrderItem entity to include size attribute with default value REGULAR.
- Introduced MenuAddOn entity and corresponding DTOs for optional add-ons.
- Implemented MenuAddOnMapper for mapping between entity and DTO.
- Enhanced MenuItemMapper to include add-ons in responses.
- Updated OrderMapper to format customer names and include user details.
- Added repository methods for fetching active branches, menu categories, and menu items.
- Created SQL scripts for altering tables and seeding initial menu data, including categories, items, and add-ons.